# gaihozu-georecognition

./: .gitignore  LICENSE  README.md  SPEC.md  app.py  corner_getter.py  example_attributes.csv  handy.html  index.html  json_generator.py  line_detector.py  main.py  preprocess.py  pyproject.toml  requirements.txt
gaihozu/: __init__.py  cli.py  gcp_generator.py  image_processor.py  visualizer.py
mapwarper_interface/: corner_getter.py  json_generator.py  main.py
tests/: __init__.py  test_cli.py  test_gcp_generator.py  test_image_processor.py  test_visualizer.py
